--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
 #myVideo {
-    position: fixed;
-    right: 0;
-    bottom: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
     max-width: 100%; 
     max-height: 100%;
   }
