--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,20 @@
-#myVideo {
+video {
+    object-fit: cover;
     position: absolute;
     top: 0;
     left: 0;
-    max-width: 100%; 
-    max-height: 100%;
+    height: 100%;
+    width: 100%;
+  
+  }
+  .video-wrapper {
+    border: 2px solid #000;
+    width: 300px;
+    height: 300px;
+    position: relative;
+    overflow: hidden;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
